--- a/src/main/resources/www/admin/scores/scores.css
+++ b/src/main/resources/www/admin/scores/scores.css
@@ -19,10 +19,29 @@
   color: var(--foreground-color);
   display: grid;
   grid-row: 1;
-  grid-template-columns: 10em 1fr 14em 14em 14em 14em;
   height: 3em;
   margin-top: 0.1em;
   width: 100%;
+}
+
+.scores_container.matches2 .heading
+{
+  grid-template-columns: 10em 1fr 0 12em 12em 0 0;
+}
+
+.scores_container.matches3 .heading
+{
+  grid-template-columns: 10em 1fr 0 12em 12em 12em 0;
+}
+
+.scores_container.matches103 .heading
+{
+  grid-template-columns: 10em 1fr 12em 12em 12em 12em 0;
+}
+
+.scores_container.matches4 .heading
+{
+  grid-template-columns: 10em 1fr 0 12em 12em 12em 12em;
 }
 
 .scores_container .body
@@ -47,9 +66,28 @@
   border: 0.1em solid var(--background-color);
   border-radius: 1em;
   display: grid;
-  grid-template-columns: 10em 1fr 14em 14em 14em 14em;
   height: calc(3em - 0.2em);
   width: calc(100% - 0.2em);
+}
+
+.scores_container.matches2 .row
+{
+  grid-template-columns: 10em 1fr 0 12em 12em 0 0;
+}
+
+.scores_container.matches3 .row
+{
+  grid-template-columns: 10em 1fr 0 12em 12em 12em 0;
+}
+
+.scores_container.matches103 .row
+{
+  grid-template-columns: 10em 1fr 12em 12em 12em 12em 0;
+}
+
+.scores_container.matches4 .row
+{
+  grid-template-columns: 10em 1fr 0 12em 12em 12em 12em;
 }
 
 .scores_container .row:hover
@@ -74,16 +112,7 @@
   grid-column: 2;
 }
 
-.scores_container .three_matches .name
-{
-  grid-column: 2 / span 2;
-}
-
-.scores_container .two_matches .name
-{
-  grid-column: 2 / span 3;
-}
-
+.scores_container .match0,
 .scores_container .match1,
 .scores_container .match2,
 .scores_container .match3,
@@ -97,62 +126,45 @@
   margin-right: 0.75em;
 }
 
-.scores_container .match1
+.scores_container .match0
 {
+  display: none;
   grid-column: 3;
 }
 
-.scores_container .three_matches .match1
+.scores_container.matches103 .match0
 {
-  grid-column: 4;
+  display: flex;
 }
 
-.scores_container .two_matches .match1
+.scores_container .match1
 {
-  grid-column: 5;
+  grid-column: 4;
 }
 
 .scores_container .match2
 {
-  grid-column: 4;
-}
-
-.scores_container .three_matches .match2
-{
   grid-column: 5;
-}
-
-.scores_container .two_matches .match2
-{
-  grid-column: 6;
 }
 
 .scores_container .match3
 {
-  grid-column: 5;
-}
-
-.scores_container .three_matches .match3
-{
   grid-column: 6;
 }
 
-.scores_container .two_matches .match3
+.scores_container.matches2 .match3
 {
   display: none;
 }
 
 .scores_container .match4
 {
-  grid-column: 6;
+  grid-column: 7;
 }
 
-.scores_container .three_matches .match4
-{
-  display: none;
-}
-
-.scores_container .two_matches .match4
+.scores_container.matches2 .match4,
+.scores_container.matches3 .match4,
+.scores_container.matches103 .match4
 {
   display: none;
 }
