--- a/src/main/resources/www/scoreboard/scoreboard.css
+++ b/src/main/resources/www/scoreboard/scoreboard.css
@@ -43,26 +43,12 @@ html, body
   width: 100%;
 }
 
-.container2
+.scores
 {
   display: grid;
   gap: 0px 0px;
   grid-auto-flow: row;
-  grid-template-areas:
-    ". .     .     .     .     .     .     .     .     ."
-    ". logo1 logo1 logo1 event event logo2 logo2 logo2 ."
-    ". .     .     .     .     .     .     .     .     ."
-    ". plt   numt  namet namet hight hight m1t   m2t   ."
-    ". pl0   num0  name0 name0 high0 high0 m10   m20   ."
-    ". pl1   num1  name1 name1 high1 high1 m11   m21   ."
-    ". pl2   num2  name2 name2 high2 high2 m12   m22   ."
-    ". pl3   num3  name3 name3 high3 high3 m13   m23   ."
-    ". pl4   num4  name4 name4 high4 high4 m14   m24   ."
-    ". pl5   num5  name5 name5 high5 high5 m15   m25   ."
-    ". pl6   num6  name6 name6 high6 high6 m16   m26   ."
-    ". pl7   num7  name7 name7 high7 high7 m17   m27   ."
-    ". .     .     .     .     .     .     .     .     ." ;
-  grid-template-columns: 2.5% repeat(2, 7.5%) 5% 52.5% 2.5% 5% repeat(2, 7.5%) 2.5%;
+  grid-template-columns: 2.5% repeat(2, 7.5%) 5% 37.5% repeat(2, 7.5%) 2.5% 5% repeat(2, 7.5%) 2.5%;
   grid-template-rows: 2.5% 20.5% 2.5% repeat(9, 8%) 2.5%;
   height: 100vh;
   overflow: hidden;
@@ -70,38 +56,80 @@ html, body
   width: 100vw;
 }
 
-.container3
+.scores.matches2
 {
-  display: grid;
-  gap: 0px 0px;
-  grid-auto-flow: row;
   grid-template-areas:
-    ". .     .     .     .     .     .     .     .     .     ."
-    ". logo1 logo1 logo1 event event event logo2 logo2 logo2 ."
-    ". .     .     .     .     .     .     .     .     .     ."
-    ". plt   numt  namet namet hight m1t   m1t   m2t   m3t   ."
-    ". pl0   num0  name0 name0 high0 m10   m10   m20   m30   ."
-    ". pl1   num1  name1 name1 high1 m11   m11   m21   m31   ."
-    ". pl2   num2  name2 name2 high2 m12   m12   m22   m32   ."
-    ". pl3   num3  name3 name3 high3 m13   m13   m23   m33   ."
-    ". pl4   num4  name4 name4 high4 m14   m14   m24   m34   ."
-    ". pl5   num5  name5 name5 high5 m15   m15   m25   m35   ."
-    ". pl6   num6  name6 name6 high6 m16   m16   m26   m36   ."
-    ". pl7   num7  name7 name7 high7 m17   m17   m27   m37   ."
-    ". .     .     .     .     .     .     .     .     .     ." ;
-  grid-template-columns: 2.5% repeat(2, 7.5%) 5% 45% 7.5% 2.5% 5% repeat(2, 7.5%) 2.5%;
-  grid-template-rows: 2.5% 20.5% 2.5% repeat(9, 8%) 2.5%;
-  height: 100vh;
-  overflow: hidden;
-  position: fixed;
-  width: 100vw;
+    ". .     .     .     .     .     .     .     .     .     .     ."
+    ". logo1 logo1 logo1 event event event event logo2 logo2 logo2 ."
+    ". .     .     .     .     .     .     .     .     .     .     ."
+    ". plt   numt  namet namet namet namet hight hight m1t   m2t   ."
+    ". pl0   num0  name0 name0 name0 name0 high0 high0 m10   m20   ."
+    ". pl1   num1  name1 name1 name1 name1 high1 high1 m11   m21   ."
+    ". pl2   num2  name2 name2 name2 name2 high2 high2 m12   m22   ."
+    ". pl3   num3  name3 name3 name3 name3 high3 high3 m13   m23   ."
+    ". pl4   num4  name4 name4 name4 name4 high4 high4 m14   m24   ."
+    ". pl5   num5  name5 name5 name5 name5 high5 high5 m15   m25   ."
+    ". pl6   num6  name6 name6 name6 name6 high6 high6 m16   m26   ."
+    ". pl7   num7  name7 name7 name7 name7 high7 high7 m17   m27   ."
+    ". .     .     .     .     .     .     .     .     .     .     ." ;
+
+  .m3t, .m30, .m31, .m32, .m33, .m34, .m35, .m36, .m37,
+  .m4t, .m40, .m41, .m42, .m43, .m44, .m45, .m46, .m47,
+  .m0t, .m00, .m01, .m02, .m03, .m04, .m05, .m06, .m07
+  {
+    display: none;
+  }
 }
 
-.container4
+.scores.matches3
 {
-  display: grid;
-  gap: 0px 0px;
-  grid-auto-flow: row;
+  grid-template-areas:
+    ". .     .     .     .     .     .     .     .     .     .     ."
+    ". logo1 logo1 logo1 event event event event logo2 logo2 logo2 ."
+    ". .     .     .     .     .     .     .     .     .     .     ."
+    ". plt   numt  namet namet namet hight m1t   m1t   m2t   m3t   ."
+    ". pl0   num0  name0 name0 name0 high0 m10   m10   m20   m30   ."
+    ". pl1   num1  name1 name1 name1 high1 m11   m11   m21   m31   ."
+    ". pl2   num2  name2 name2 name2 high2 m12   m12   m22   m32   ."
+    ". pl3   num3  name3 name3 name3 high3 m13   m13   m23   m33   ."
+    ". pl4   num4  name4 name4 name4 high4 m14   m14   m24   m34   ."
+    ". pl5   num5  name5 name5 name5 high5 m15   m15   m25   m35   ."
+    ". pl6   num6  name6 name6 name6 high6 m16   m16   m26   m36   ."
+    ". pl7   num7  name7 name7 name7 high7 m17   m17   m27   m37   ."
+    ". .     .     .     .     .     .     .     .     .     .     ." ;
+
+  .m4t, .m40, .m41, .m42, .m43, .m44, .m45, .m46, .m47,
+  .m0t, .m00, .m01, .m02, .m03, .m04, .m05, .m06, .m07
+  {
+    display: none;
+  }
+}
+
+.scores.matches103
+{
+  grid-template-areas:
+    ". .     .     .     .     .     .     .     .     .     .     ."
+    ". logo1 logo1 logo1 event event event event logo2 logo2 logo2 ."
+    ". .     .     .     .     .     .     .     .     .     .     ."
+    ". plt   numt  namet namet hight m1t   m2t   m2t   m3t   m0t   ."
+    ". pl0   num0  name0 name0 high0 m10   m20   m20   m30   m00   ."
+    ". pl1   num1  name1 name1 high1 m11   m21   m21   m31   m01   ."
+    ". pl2   num2  name2 name2 high2 m12   m22   m22   m32   m02   ."
+    ". pl3   num3  name3 name3 high3 m13   m23   m23   m33   m03   ."
+    ". pl4   num4  name4 name4 high4 m14   m24   m24   m34   m04   ."
+    ". pl5   num5  name5 name5 high5 m15   m25   m25   m35   m05   ."
+    ". pl6   num6  name6 name6 high6 m16   m26   m26   m36   m06   ."
+    ". pl7   num7  name7 name7 high7 m17   m27   m27   m37   m07   ."
+    ". .     .     .     .     .     .     .     .     .     .     ." ;
+
+  .m4t, .m40, .m41, .m42, .m43, .m44, .m45, .m46, .m47
+  {
+    display: none;
+  }
+}
+
+.scores.matches4
+{
   grid-template-areas:
     ". .     .     .     .     .     .     .     .     .     .     ."
     ". logo1 logo1 logo1 event event event event logo2 logo2 logo2 ."
@@ -116,12 +144,11 @@ html, body
     ". pl6   num6  name6 name6 high6 m16   m26   m26   m36   m46   ."
     ". pl7   num7  name7 name7 high7 m17   m27   m27   m37   m47   ."
     ". .     .     .     .     .     .     .     .     .     .     ." ;
-  grid-template-columns: 2.5% repeat(2, 7.5%) 5% 37.5% repeat(2, 7.5%) 2.5% 5% repeat(2, 7.5%) 2.5%;
-  grid-template-rows: 2.5% 20.5% 2.5% repeat(9, 8%) 2.5%;
-  height: 100vh;
-  overflow: hidden;
-  position: fixed;
-  width: 100vw;
+
+  .m0t, .m00, .m01, .m02, .m03, .m04, .m05, .m06, .m07
+  {
+    display: none;
+  }
 }
 
 .logo1
@@ -195,6 +222,12 @@ html, body
   grid-area: hight;
 }
 
+.m0t
+{
+  background-color: var(--accent-color);
+  grid-area: m0t;
+}
+
 .m1t
 {
   background-color: var(--accent-color);
@@ -223,6 +256,7 @@ html, body
 .num0 { grid-area: num0; }
 .name0 { grid-area: name0; }
 .high0 { grid-area: high0; }
+.m00 { grid-area: m00; }
 .m10 { grid-area: m10; }
 .m20 { grid-area: m20; }
 .m30 { grid-area: m30; }
@@ -231,6 +265,7 @@ html, body
 .num1 { grid-area: num1; }
 .name1 { grid-area: name1; }
 .high1 { grid-area: high1; }
+.m01 { grid-area: m01; }
 .m11 { grid-area: m11; }
 .m21 { grid-area: m21; }
 .m31 { grid-area: m31; }
@@ -239,6 +274,7 @@ html, body
 .num2 { grid-area: num2; }
 .name2 { grid-area: name2; }
 .high2 { grid-area: high2; }
+.m02 { grid-area: m02; }
 .m12 { grid-area: m12; }
 .m22 { grid-area: m22; }
 .m32 { grid-area: m32; }
@@ -247,6 +283,7 @@ html, body
 .num3 { grid-area: num3; }
 .name3 { grid-area: name3; }
 .high3 { grid-area: high3; }
+.m03 { grid-area: m03; }
 .m13 { grid-area: m13; }
 .m23 { grid-area: m23; }
 .m33 { grid-area: m33; }
@@ -255,6 +292,7 @@ html, body
 .num4 { grid-area: num4; }
 .name4 { grid-area: name4; }
 .high4 { grid-area: high4; }
+.m04 { grid-area: m04; }
 .m14 { grid-area: m14; }
 .m24 { grid-area: m24; }
 .m34 { grid-area: m34; }
@@ -263,6 +301,7 @@ html, body
 .num5 { grid-area: num5; }
 .name5 { grid-area: name5; }
 .high5 { grid-area: high5; }
+.m05 { grid-area: m05; }
 .m15 { grid-area: m15; }
 .m25 { grid-area: m25; }
 .m35 { grid-area: m35; }
@@ -271,6 +310,7 @@ html, body
 .num6 { grid-area: num6; }
 .name6 { grid-area: name6; }
 .high6 { grid-area: high6; }
+.m06 { grid-area: m06; }
 .m16 { grid-area: m16; }
 .m26 { grid-area: m26; }
 .m36 { grid-area: m36; }
@@ -279,6 +319,7 @@ html, body
 .num7 { grid-area: num7; }
 .name7 { grid-area: name7; }
 .high7 { grid-area: high7; }
+.m07 { grid-area: m07; }
 .m17 { grid-area: m17; }
 .m27 { grid-area: m27; }
 .m37 { grid-area: m37; }
