Clean up the QR screen.

--- a/src/main/resources/fragments/links_wifi.html
+++ b/src/main/resources/fragments/links_wifi.html
@@ -5,6 +5,9 @@ Open Source Software; you can modify and/or share it under the terms of BSD
 license file in the root directory of this project.
 -->
     <div id="links_wifi" class="links_tile">
-      <img src="/links/wifi.png">
-      <p><!--#str_links_wifi--></p>
+      <span class="title"><!--#str_links_wifi--></span>
+      <div class="qr">
+        <img src="/links/wifi.png">
+      </div>
+      <span class="link">WiFi: <!--#wifi_ssid--></span>
     </div>
