Allow pause on the standings display.

--- a/src/main/resources/www/standings/standings.css
+++ b/src/main/resources/www/standings/standings.css
@@ -177,3 +177,28 @@ html, body
 .scr7 { grid-area: scr7; }
 .e17 { grid-area: e17; }
 .e27 { grid-area: e27; }
+
+.paused
+{
+  animation: color_change 1s infinite alternate;
+  color: var(--color-red);
+  display: none;
+  font-size: 3em;
+  justify-content: center;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 1rem;
+}
+
+@keyframes color_change
+{
+  from
+  {
+    color: red;
+  }
+  to
+  {
+    color: blue;
+  }
+}
