Add a check or x as non-color indicators of partial or complete scoresheets and rubrics.

--- a/src/main/resources/www/judge/judge.css
+++ b/src/main/resources/www/judge/judge.css
@@ -93,6 +93,22 @@
       {
         padding: 0.25em 0;
         width: 90%;
+
+        &::before
+        {
+          font-family: FontAwesome;
+          margin-right: 0.25em;
+        }
+
+        &.red::before
+        {
+          content: "\f00d";
+        }
+
+        &.green::before
+        {
+          content: "\f00c";
+        }
       }
 
       .name
